[gd_scene load_steps=2 format=3 uid="uid://b8x7y9z0a1b2c3d4"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_abc123"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_abc123")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.3, 0.5, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Mini 2D Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PracticeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Practice"

[node name="ChallengeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Challenge Run"

[node name="DifficultyLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Difficulty: Regular"
horizontal_alignment = 1

[node name="DifficultySlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2

[node name="LevelTypeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Level Type: Obstacles + Coins"
horizontal_alignment = 1

[node name="LevelTypeOption" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2

[node name="LimitedFieldOfViewCheckBox" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Limited Field of View"
button_pressed = true

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"
